--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "numpy>=1.24.0",
     "matplotlib>=3.7.0",
     "pydantic>=2.5.0",
-    "typing-extensions>=4.8.0"
+    "typing-extensions>=4.8.0",
+    "babel>=2.14.0",
+    "polib>=1.2.0"
 ]
 
 [project.scripts]
@@ -40,6 +42,8 @@ numpy = "^1.24.0"
 matplotlib = "^3.7.0"
 pydantic = "^2.5.0"
 typing-extensions = "^4.8.0"
+babel = "^2.14.0"
+polib = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
